--- a/instagram/src/App.css
+++ b/instagram/src/App.css
@@ -1,26 +1,22 @@
 .App {
-  text-align: center;
+  text-align: left;
+  margin: 0px 20px 10px 20px;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  height: 80px;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 150;
+  padding: 20px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-title {
+  font-size: 1.5em;
 }
 
 @keyframes App-logo-spin {
@@ -31,3 +27,4 @@
     transform: rotate(360deg);
   }
 }
+
